--- a/aula 02 - conversor de moedas/index.html
+++ b/aula 02 - conversor de moedas/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Conversor de moedas</title>
+    <title>Imersão Dev Alura - Aula 02Document</title>
 </head>
 <body>
     <div class="container">
