--- a/aula 01- calculadora de media/index.html
+++ b/aula 01- calculadora de media/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
-    <title>Imersão Dev Alura - Aula 01Document</title>
+    <title>Imersão Dev Alura - Aula 01</title>
 </head>
 
 <body>
@@ -32,7 +31,7 @@
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
-
+    <script src="app.js" defer></script>
 </body>
 
 </html>
