--- a/aula 02 - conversor de moedas/index.html
+++ b/aula 02 - conversor de moedas/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <title>Imersão Dev Alura - Aula 02Document</title>
+    <title>Imersão Dev Alura - Aula 02</title>
 </head>
 <body>
     <div class="container">
@@ -20,5 +19,6 @@
     </div>
     <a href="https://alura.com.br/" target="_blank"></a>
     <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
+    <script src="script.js"></script>
 </body>
 </html>
