--- a/aula 01- calculadora de media/index.html
+++ b/aula 01- calculadora de media/index.html
@@ -14,8 +14,7 @@
         <h1 class="page-title">Calculadora de média</h1>
         <h2 class="page-subtitle">Descubra qual a sua média de nota de todas as provas!</h2>
         <br>
-        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg"
-            class="page-logo" alt="">
+        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt="">
         <div class="form">
             <input required placeholder="Nota Primeiro Bimestre" type="number" id="primeiroBimestre">
             <input required placeholder="Nota Segundo Bimestre" type="number" id="segundoBimestre">
