--- a/aula 03 - mentalista/index.html
+++ b/aula 03 - mentalista/index.html
@@ -14,12 +14,12 @@
         </h1>
         <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page-logo"
             alt=""><br>
-        <p class="page-subtitle">
-            Digite um número de 0 a 10
-        </p>
-        <input type="number" id="valor" /><br>
-        <button type="submit" onclick="Chutar()">Chutar</button>
-        <h2 class="resultado" id="resultado"></h2>
+        <div class="caixa">
+            <h2 class="page-subtitle">Digite um número de 0 a 10</h2>
+            <input required type="number" id="valor" /><br><br>
+            <button type="submit" onclick="Chutar()">Chutar</button>
+            <h2 class="resultado" id="resultado"></h2>
+        </div>
     </div>
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
