--- a/aula 05 - aluraflix/index.html
+++ b/aula 05 - aluraflix/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="page-title">Aluraflix</h1> 
-        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo" alt=""><br><br>
+        <h1 class="page-title">Aluraflix</h1>
+        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo"
+            alt=""><br><br>
         <h2 class="page-subtitle">Qual seu filme favorito</h2><br>
         <div class="form-wrapper">
             <input type="text" id="filme" name="filme" placeholder="Insira endereço de imagem">
