--- a/aula 06 - objetos e tabela de classificação/index.html
+++ b/aula 06 - objetos e tabela de classificação/index.html
@@ -3,13 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Imersão Dev Alura - Aula 05</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<html>
-<head>
-  <title>Tabela de Classificação</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -52,11 +46,6 @@
       </tr> -->
     </tbody>
   </table>
-</body>
-
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
+  <script src="./script.js"></script>
 </body>
 </html>
