--- a/aula 06 - objetos e tabela de classificação/index.html
+++ b/aula 06 - objetos e tabela de classificação/index.html
@@ -2,17 +2,17 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Imersão Dev Alura - Aula 05</title>
+  <title>Imersão Dev Alura - Aula 06</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt="">
   <h1>Tabela de classificação</h1>
-  <p class="page-subtitle"> Adicione seu nome no jogo</p>
-  <input type="text" id="nomeJogador" name="nomeJogador" placeholder="Nome jogador">
+  <input type="text" id="nomeJogador" name="nomeJogador" placeholder="Adicionar novo jogador">
   <button onclick="adicionarJogador()">Adicionar Jogador</button>
   <button onclick="zerarPontos()">Zerar Pontuação</button>
-  <table style="width:100%">
+  <table style="width:95%">
     <thead>
       <tr>
         <th>Nome</th>
